add color to nav

--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,19 @@ h1{
 }
 .navBg{
     background-color: black;
-    color: yellow !important;
+    color: white !important;
 }
+
+.nav-item, .nav-link, .navbar-brand{
+    color: #fdcb04cf !important;
+}
+.fixed-top{
+
+    /* -webkit-box-shadow: 20px 20px 20px black; */
+    /* -moz-box-shadow:    20px 20px 20px rgba(26, 27, 21, 0.438); */
+    box-shadow: 0px 10px 30px rgba(26, 27, 21, 0.438);
+}
+
 
 .bgFixed{
     background-attachment: fixed;
@@ -21,6 +32,7 @@ h1{
 
 }
 .bg-1{
+    margin-top: 100px;
     min-height: 100vh;
 }
 .bg-3{
